# omnilogic-v2.1.0

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/init-scripts/: 01-create-extensions.sql
backend/plugins/calculator/: __init__.py
backend/plugins/code_runner/: __init__.py
backend/plugins/web_search/: __init__.py
backend/src/omnilogic/: __init__.py
backend/src/omnilogic/quantumquery/: __init__.py
docs/architecture/: OmniLogic-v2.1-Architecture-Blueprint.md
docs/planning/: OmniLogic-pdr.md  omnilogic_implementation_plan.md
